--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
     --secondary: 210 40% 96.1%; /* #f1f5ff */
     --secondary-foreground: 222.2 47.4% 11.2%; /* #100317 */
     --muted: 210 40% 96.1%; /* #f1f5ff */
-    --muted-foreground: 215.4 16.3% 46.9%; /* #6f7582 */
+    --muted-foreground: 0 0% 47%; /* #777777 */
     --accent: 210 40% 96.1%; /* #f1f5ff */
     --accent-foreground: 222.2 47.4% 11.2%; /* #100317 */
     --destructive: 0 84.2% 60.2%; /* #d93636 */
